--- a/proyecto-integrador/package.json
+++ b/proyecto-integrador/package.json
@@ -13,6 +13,7 @@
     "express": "^4.19.2",
     "express-validator": "^7.1.0",
     "http-errors": "~1.6.3",
+    "moment": "^2.30.1",
     "morgan": "~1.9.1",
     "mysql2": "^3.9.7",
     "sequelize": "^6.37.3"
